largest integer less than x proof

--- a/completeness.tex
+++ b/completeness.tex
@@ -329,6 +329,13 @@ $x<k<y$. Hint: let $l$ be the largest integer satisfying $l\leq x$, and
 consider $l+1$.
 
 \subsubsection*{Solution}
+\textbf{Lemma:} there exists the largest integer $l$ such that $l\leq x$.
+
+Since $\mathcal{N}$ is unbounded, there exists $n\in\mathcal{N}$ such that $-n<x<n$. There
+is a finite number of integers between $-n$ and $x$. Pick the largest.
+
+\vs
+
 Let $l$ be the largest integer such that $l\leq x$. Then
 \begin{itemize}
 \item $l+1>x$, otherwise $l$ wouldn't be the \textit{largest} integer
@@ -391,9 +398,6 @@ numbers with $a_{n+1}\leq a_{n}/2$. Prove that for any $\epsilon>0$ there is
 some $n$ with $a_{n}<\epsilon$.
 
 \subsubsection*{Solution}
-
-
-
 
 
 %%% Local Variables:
