separating hw and notes again

--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage{./style}
+\usepackage{../style}
 
 \title{Notes working through Spivak's Calculus}
 \author{Slava Akhmechet}
