--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -17,6 +17,10 @@ chapter 5, so the homework problems are inlined in the notes.
 \input{ch2.tex}
 \input{ch3.tex}
 \input{ch4.tex}
+\input{ch5.tex}
+\input{ch6.tex}
+\input{ch7.tex}
+\input{ch8.tex}
 
 \end{document}
 
