--- a/notes/completeness.tex
+++ b/notes/completeness.tex
@@ -46,6 +46,23 @@ $\mathcal{R}$ are.\footnote{Proof that $\mathcal{R}$ is a complete ordered field
   reader (i.e., currently myself) to take this on faith.} Thus from
 here $\mathcal{R}$-valued functions will become our primary object of study.
 
+\subsection{Aside: sqrt(2) is irrational}\label{sqrt2proof}
+Suppose $\sqrt{2}\in\mathcal{Q}$. Then there exist $a,b\in\mathcal{N}$ such that
+$\left(\frac{a}{b}\right)^{2}=2$. Assume $a, b$ have no common divisor
+(since we can obviously keep simplifying until this is the case).
+Observe that both $a$ and $b$ cannot be even, otherwise we could
+simplify further.
+
+\vs
+
+Now we have $a^{2}=2b^{2}$. Thus $a^{2}$ is even, $a$ must be
+even\footnote{Even numbers have even squares because
+  ${(2k)}^{2}=4k^{2}=2\cdot(2k^{2})$}, and there exists
+$k\in\mathcal{N}$ such that $a=2k$. Then $a^{2}=4k^{2}=2b^{2}$ so
+$2k^{2}=b^{2}$. Thus $b^{2}$ is even and so $b$ is even. Since both
+$a$ and $b$ cannot be even, this is a contradiction. Thus
+$\sqrt{2}\notin\mathcal{Q}$ as desired.
+
 \subsection{Least upper bound}
 \textbf{Definition:} $b$ is an \textbf{upper bound} for $S$ if
 $s\leq b$ for all $s\in S$.
@@ -304,24 +321,6 @@ $\frac{x}{\sqrt{2}}<r<\frac{y}{\sqrt{2}}$. Multiplying each side by
 $\sqrt{2}$, we get $x<\sqrt{2}r<y$. We know $\sqrt{2}r$ is irrational.
 Thus there exists an irrational number between any two numbers in
 $\mathcal{R}$, and the set of irrationals $\mathcal{R}\setminus\mathcal{Q}$ is dense as desired.
-
-\subsection{Appendix: sqrt(2) is irrational}\label{sqrt2proof}
-Suppose $\sqrt{2}\in\mathcal{Q}$. Then there exist $a,b\in\mathcal{N}$ such that
-$\left(\frac{a}{b}\right)^{2}=2$. Assume $a, b$ have no common divisor
-(since we can obviously keep simplifying until this is the case).
-Observe that both $a$ and $b$ cannot be even, otherwise we could
-simplify further.
-
-\vs
-
-Now we have $a^{2}=2b^{2}$. Thus $a^{2}$ is even, $a$ must be
-even\footnote{Even numbers have even squares because
-  ${(2k)}^{2}=4k^{2}=2\cdot(2k^{2})$}, and there exists
-$k\in\mathcal{N}$ such that $a=2k$. Then $a^{2}=4k^{2}=2b^{2}$ so
-$2k^{2}=b^{2}$. Thus $b^{2}$ is even and so $b$ is even. Since both
-$a$ and $b$ cannot be even, this is a contradiction. Thus
-$\sqrt{2}\notin\mathcal{Q}$ as desired.
-
 
 %%% Local Variables:
 %%% TeX-master: "notes"
