--- a/notes/completeness.tex
+++ b/notes/completeness.tex
@@ -63,7 +63,7 @@ $2k^{2}=b^{2}$. Thus $b^{2}$ is even and so $b$ is even. Since both
 $a$ and $b$ cannot be even, this is a contradiction. Thus
 $\sqrt{2}\notin\mathcal{Q}$ as desired.
 
-\subsection{Least upper bound}
+\subsection{Least Upper Bound}
 \textbf{Definition:} $b$ is an \textbf{upper bound} for $S$ if
 $s\leq b$ for all $s\in S$.
 
