a bit more cleanup

--- a/notes/completeness.tex
+++ b/notes/completeness.tex
@@ -46,7 +46,7 @@ $\mathcal{R}$ are.\footnote{Proof that $\mathcal{R}$ is a complete ordered field
   reader (i.e., currently myself) to take this on faith.} Thus from
 here $\mathcal{R}$-valued functions will become our primary object of study.
 
-\subsection{Aside: sqrt(2) is irrational}\label{sqrt2proof}
+\subsubsection*{Aside: sqrt(2) is irrational}\label{sqrt2proof}
 Suppose $\sqrt{2}\in\mathcal{Q}$. Then there exist $a,b\in\mathcal{N}$ such that
 $\left(\frac{a}{b}\right)^{2}=2$. Assume $a, b$ have no common divisor
 (since we can obviously keep simplifying until this is the case).
