--- a/notes/limits.tex
+++ b/notes/limits.tex
@@ -1,6 +1,7 @@
 \section{Limits}
 
-\subsection{A hand-wavy limits definition}
+\subsection{Precalculus}
+\subsubsection*{A hand-wavy limits definition}
 
 I'll first do a hand-wavy definition of limits, and then use it to
 explain the mechanics of computing limits of functions in practice.
@@ -38,7 +39,7 @@ limit of this thing? Can you just plug $0$ into the equation? It seems
 to work, but once we formally define limits, we'll have to prove
 somehow that plugging $a=0$ into $x$ gives us the correct result.
 
-\subsection{Limits evaluation mechanics}
+\subsubsection*{Limits evaluation mechanics}
 
 It turns out that it does in fact work because of a few theorems that
 make practical evaluation of many limits easy. I'll first state these
