--- a/notes/limits.tex
+++ b/notes/limits.tex
@@ -200,7 +200,7 @@ contradiction\footnote{note we assumed $L>M$, thus $\epsilon=(L-M)/4>0$}:
 
 We have a contradiction, and so $L=M$ as desired.
 
-\subsubsection*{Half-Value Continuity Lemma} \label{subsubsec:half-value-lemma}
+\subsubsection*{Half-Value Neighborhood Lemma} \label{subsubsec:half-value-lemma}
 
 This lemma will come in handy later, so we may as well prove it now.
 Suppose $M\neq0$ and $\lim_{x\to a}g(x)=M$. We show that there exists some
@@ -402,7 +402,7 @@ Let $\lim_{x\to a}f(x)=L$. We prove $\lim_{x\to a}\left(\frac{1}{f}\right)(x)=1/
 \vs
 
 First we show $\frac{1}{f}$ is defined near $a$. By half-value
-continuity lemma (see \ref{subsubsec:half-value-lemma}) there exists
+neighborhood lemma (see \ref{subsubsec:half-value-lemma}) there exists
 $\delta_{1}$ such that $0<|x-a|<\delta_{1}$ implies $|f(x)|\geq |L|/2$ where
 $L\neq0$. Therefore $f(x)\neq 0$ near $a$, and thus $\frac{1}{f}$ near
 $a$ is defined.
