--- a/notes/continuity.tex
+++ b/notes/continuity.tex
@@ -44,10 +44,8 @@ around $a$ on which $f(x)\neq0$ and has the same sign as $f(a)$.
 
 \vs
 
-\textbf{Proof:} since $f$ is continuous at $a$,
-$\lim_{x\to a}f(x)=f(a)$. By half-value neighborhood lemma, there exists
-some $\delta$ such that $0<|x-a|<\delta$ implies $|f(x)|\geq|f(a)|/2$ for all $x$.
-There are two cases: \textbf{TODO}
+\textbf{Proof.} The proof follows trivially from the half-value
+neighborhood lemma.
 
 
 \subsection{Recognizing continuous functions}
