--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -30,6 +30,7 @@ is much less confusing than Spivak's.
 \tableofcontents
 
 \input{limits.tex}
+\input{limits2.tex}
 \input{continuity.tex}
 \input{completeness.tex}
 \input{continuity2.tex}
