--- a/notes/continuity2.tex
+++ b/notes/continuity2.tex
@@ -151,6 +151,42 @@ $f(y)\geq f(x)$ for all $x$ in $[a,b]$.
 
 \subsubsection*{EVT generalization}
 
+Claim 2 above proves a continuous $f$ is bounded above. The
+\textit{boundedness theorem} is usually presented slightly more
+generally, i.e. it proves $f$ is bounded above \textit{and} below.
+This is easy to derive from claim 2.
+
+\vs
+
+\textbf{Claim 2a (boundedness theorem):} if $f$ is continuous on
+$[a,b]$, then $f$ is bounded \textit{below} on $[a,b]$. I.e. there is
+some numbers $N$ such that $f(x)\geq N$ for all $x$ in $[a,b]$.
+
+\vs
+
+\textbf{Proof:} observe that $-f$ is continuous on $[a,b]$. By claim 2
+there exists a number $M$ such that $-f(x)\leq M$ for all $x$ in
+$[a,b]$. But that means $f(x)\geq -M$ for all $x$ in $[a,b]$. QED.
+
+\vs
+
+Similarly, claim 3 above proves a continuous $f$ attains its maximum.
+The extreme value theorem is usually presented slightly more
+generally, i.e. it states a continuous $f$ attains both its maximum
+and its minimum. Again, this is easy to derive from claim 3.
+
+\vs
+
+\textbf{Cliam 3a (extreme value theorem)}: If $f$ is continuous on
+$[a,b]$, then there is some number $y$ in $[a,b]$ such that
+$f(y)\leq f(x)$ for all $x$ in $[a,b]$.
+
+\vs
+
+\textbf{Proof:} Observe that $-f$ is continous on $[a,b]$. By claim 3
+there is some $y$ in $[a,b]$ such that $-f(y)\geq-f(x)$ for all $x$ in
+$[a,b]$. But that means that $f(y)\leq f(x)$ for all $x$ in $[a,b]$. QED.
+
 
 \subsection{Appendix: IVT and EVT consequences}
 
