--- a/notes/limits2.tex
+++ b/notes/limits2.tex
@@ -83,6 +83,11 @@ $|f(x)-L|\geq\frac{1}{10}$.
 
 Thus $\lim_{x\to a}f(x)$ does not exist for any $a$, as desired.
 
+\subsection{One-sided limits}
+TODO
+
+\subsection{Infinite limits}
+TODO
 
 %%% Local Variables:
 %%% TeX-master: "notes"
