adding separators for clarity

--- a/notes/continuity2.tex
+++ b/notes/continuity2.tex
@@ -107,7 +107,7 @@ To see why we need the extreme value theorem, consider
 $f=\frac{1}{x}$. $f$ is discontinuous at $0$ and approaches infinity.
 Thus $f$ does not attain a maximum value on the interval $[0,1]$.
 
-\vs
+\sep
 
 \textbf{Claim 1 (bounded neighborhood lemma):} if $f$ is continuous at $a$, then there is $\delta>0$
 such that $f$ is bounded above on the interval $(a-\delta, a+\delta)$.
@@ -124,7 +124,7 @@ $f(a)+\epsilon$ is the upper bound on $f$ within $(a-\delta, a+\delta)$, as desi
 (Note that we can pick any $\epsilon$ to concretize the proof, for example
 $\epsilon=1$.)
 
-\vs
+\sep
 
 \textbf{Claim 2 (boundedness theorem):} if $f$ is continuous on
 $[a,b]$, then $f$ is bounded above on $[a,b]$. I.e. there is some
@@ -183,7 +183,7 @@ any $x_{0}$ such that $b-\delta<x_{0}<b$. Then:
 Since $f$ is bounded above on $[a,x_{0}]$ and on $[x_{0}, b]$, it
 follows $f$ is bounded above on $[a,b]$ as desired. QED.
 
-\vs
+\sep
 
 \textbf{Claim 3: (extreme value theorem):} If $f$ is continuous on
 $[a,b]$, then there is some number $y$ in $[a,b]$ such that
@@ -212,7 +212,7 @@ some numbers $N$ such that $f(x)\geq N$ for all $x$ in $[a,b]$.
 there exists a number $M$ such that $-f(x)\leq M$ for all $x$ in
 $[a,b]$. But that means $f(x)\geq -M$ for all $x$ in $[a,b]$. QED.
 
-\vs
+\sep
 
 Similarly, claim 3 above proves a continuous $f$ attains its maximum.
 The extreme value theorem is usually presented slightly more
@@ -241,7 +241,7 @@ $\alpha>0$, then there is some number $x$ such that $x^{2}=\alpha$.
 
 \textbf{Proof:} TBD.
 
-\vs
+\sep
 
 \textbf{Claim 2:} If $n$ is odd, then any equation of the form
 \[x^{n}+a_{n-1}x^{n-1}+\ldots+a_{0}=0\]
@@ -251,7 +251,7 @@ has a root.
 
 \textbf{Proof:} TBD.
 
-\vs
+\sep
 
 \textbf{Claim 3:} If $n$ is even and
 $f(x)=x^{n}+a_{n-1}x^{n-1}+\ldots+a_{0}$, then there is a number $y$ such
@@ -261,7 +261,7 @@ that $f(y)\leq f(x)$ for all $x$.
 
 \textbf{Proof:} TBD.
 
-\vs
+\sep
 
 \textbf{Claim 4:} Consider the equation
 \[x^{n}+a_{n-1}x^{n-1}+\ldots+a_{0}=c\]
