--- a/style.sty
+++ b/style.sty
@@ -17,3 +17,9 @@
 \newcommand{\spn}{\text{span}}
 \newcommand{\nil}{\text{null}\,}
 \newcommand{\range}{\text{range}\,}
+\newcommand{\sep}{
+  \vspace{1em}
+  \par\noindent\centering\text{***}\par
+  \vspace{1em}
+  \raggedright
+}
