adding ch7 hw problems

--- a/hw/ch7.tex
+++ b/hw/ch7.tex
@@ -1,5 +1,94 @@
 \section{Three Hard Theorems}
-\textbf{TBD}
+
+\subsection*{Problem 1}
+Decide which functions are bounded above or below on the given
+interval, and which take on their min and max values. (Note, $f$ may
+have these properties even if it isn't continuous or the interval
+isn't closed.)
+
+\subsection*{Solution}
+
+(i) $f(x)=x^{2}$ on $(-1,1)$
+
+\vs
+
+(ii) $f(x)=x^{3}$ on $(-1,1$
+
+\vs
+
+(iii) $f(x)=x^{2}$ on $\R$
+
+\vs
+
+(iv) $f(x)=x^{2}$ on $[0, \infty)$
+
+\vs
+
+(v) $f(x)=\begin{cases}
+  x^{2}, x\leq a\\
+  a+2, x>a
+\end{cases}$ on $(-a-1, a+1)$.
+
+(It will be necessary to consider several possibilities for $a$.)
+
+\vs
+
+(vi) $f(x)=\begin{cases}
+  x^{2}, x<a\\
+  a+2, x\geq a
+\end{cases}$ on $[-a-1, a+1]$.
+
+\vs
+
+(vii) $f(x)=\begin{cases}
+  0, \text{$x$ is irrational}\\
+  1/q \ \ \ x=p/q \text{ in lowest terms}
+\end{cases}$ on $[0, 1]$.
+
+\vs
+
+(viii) $f(x)=\begin{cases}
+  1, \text{$x$ is irrational}\\
+  1/q \ \ \ x=p/q \text{ in lowest terms}
+\end{cases}$ on $[0, 1]$.
+
+\vs
+
+(ix) $f(x)=\begin{cases}
+  1, \text{$x$ is irrational}\\
+  -1/q \ \ \ x=p/q \text{ in lowest terms}
+\end{cases}$ on $[0, 1]$.
+
+\vs
+
+(x) $f(x)=\begin{cases}
+  x, \text{$x$ is rational}\\
+  0 \ \ \ \text{$x$ is irrational}
+\end{cases}$ on $[0, a]$.
+
+
+\subsection*{Problem 3}
+Prove that there is some number $x$ such that
+
+\subsection*{Solution}
+(i) $x^{179}+\frac{163}{1+x^{2}+\sin^{2} x}=119$
+
+\vs
+
+(ii) $\sin x = x-1$
+
+\subsection*{Problem 5}
+Suppose that $f$ is continuous on $[a,b]$ and that $f(x)$ is always
+rational. What can be said about $f$?
+
+\subsection*{Solution}
+
+\subsection*{Problem 17}
+Suppose that $f$ is a continuous function with $f(x)>0$ for all $x$,
+and $\lim_{x\to\infty} f(x)=0=\lim_{x\to-\infty} f(x)$. (Draw a picture.) Prove that
+there is some number $y$ such that $f(y)\geq f(x)$ for all $x$.
+
+\subsection*{Solution}
 
 %%% Local Variables:
 %%% TeX-master: "hw"
